# PulsarEngine

./: .gitignore  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/data/shader/: BasicLighting.fs  Normal.vs
Examples/example1/: CMakeLists.txt
Examples/example1/src/: example.cpp
Pulsar/: CMakeLists.txt
Pulsar/include/: Light.hpp  Pulsar.hpp  PulsarCamera.hpp  PulsarMath.hpp  PulsarMesh.hpp  PulsarRay.hpp  PulsarScene.hpp  PulsarShader.hpp  PulsarTexture.hpp  PulsarWindow.hpp  Quaternion.hpp
Pulsar/src/: Pulsar.cpp  PulsarCamera.cpp  PulsarMesh.cpp  PulsarScene.cpp  PulsarShader.cpp  PulsarTexture.cpp  PulsarWindow.cpp
data/shader/: BasicLighting.fs  BasicShader.fs  Normal.fs  test.fs  test.vs
example/: CMakeLists.txt
example/ExampleUtils/: CMakeLists.txt
example/ExampleUtils/include/: ExampleUtils.hpp
example/ExampleUtils/src/: ExampleUtils.cpp
example/example1/: CMakeLists.txt
example/example1/src/: example.cpp
